[tool.poetry]
name = "web-driver-testing"
version = "0.1.0"
description = ""
authors = ["Ben West <benjamin.west@bt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
selenium = "^4.27.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
